# cmake_add_lib

./: CMakeLists.txt  build_dependencies.sh  main.cpp
cmake/: Findffmpeg.cmake
include/: test.h
